CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(all)

#### library paths
SET(LIBRARY_PATH "${CMAKE_SOURCE_DIR}/lib")

#### output paths
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")

#### settings
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wno-deprecated")
# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
SET(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -L${LIBRARY_PATH} -lpthread")

#### projects
ADD_SUBDIRECTORY(revolver)
ADD_SUBDIRECTORY(rudp)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(silencer)
ADD_SUBDIRECTORY(daemon)
ADD_SUBDIRECTORY(test) 
ADD_SUBDIRECTORY(rudprecv)
ADD_SUBDIRECTORY(rudpsend)
ADD_SUBDIRECTORY(sample)
